--- a/Math/几何/几何.md
+++ b/Math/几何/几何.md
@@ -115,6 +115,15 @@ a/sinA = b/sinB = c/sinC = 2r = D（r为外接圆半径，D为直径）
 
 
 
+在图形中，点积有下面的作用：
+
+- 求两个向量的角度（例如光源和表面的夹角和余弦）
+- 寻找一个向量投影到另一个向量的样子
+- 测量两个方向的接近程度
+- 确定向前还是向后
+
+
+
 向量a // 向量b：xa * yb - xb * ya = 0
 
 
@@ -124,6 +133,8 @@ a/sinA = b/sinB = c/sinC = 2r = D（r为外接圆半径，D为直径）
 向量a x 向量b = (ya * zb - za * yb, za * xb - xa * zb, xa * yb - ya * xb)
 
 ​                         = |a| * |b| * sinθ * 向量n（向量n 是向量ab 所在平面的单位法向量）
+
+**方向由右手法则确定**
 
 <img src="向量的叉乘.png" style="zoom:50%;" />
 
