--- a/Math/线性代数/线性代数.md
+++ b/Math/线性代数/线性代数.md
@@ -1,4 +1,4 @@
-向量：
+#### 向量：
 
 1. 具有方向和常量大小的线段（物理）
 2. 有序数字列表（计算机）
@@ -12,17 +12,120 @@
 
 ![](向量的矩阵表达.png)
 
-向量加法：
+**向量加法**：
 
 va + vb 几何意义是把 vb 的起点移动到 va 的终点，从 va 起点到 vb 终点的新向量
 
 va = [xa, ya]，vb = [xb, yb]，va + vb = [xa + xb, ya + yb]
 
-向量数乘：
+**向量减法**：
+
+va - vb 几何意义是把 vb 的起点移动到 va 的起点，从 vb 的终点指向 va 的终点的新向量：va = [xa, ya]，vb = [xb, yb]，va - vb = [xb - xa, yb - ya]
+
+**向量数乘**：
 
 va * n 几何意义是把 va 放大 n 倍，如果 n 为负数表示方向取反
 
 va = [xa, ya]，va * n = [n * xa, n * ya]
+
+**向量点乘（内积/数量积）**：
+
+向量a · 向量b = xa * xb + ya * yb = |a| * |b| * cosθ
+
+向量a · 向量b = [{xa}, {ya}] · [{xb}, {yb}] = xaxb + yayb
+
+
+
+<img src="向量点乘(内积).png" style="zoom:50%;" />
+
+几何意义：向量a 在向量b 方向上投影与|b|的乘积，反应两个向量的相似度，结果越大越相似。
+
+向量a · 向量b > 0：方向基本同向，夹角在0°到90°之间
+
+向量a · 向量b = 0：向量正交，互相垂直
+
+向量a · 向量b < 0：方向相反，夹角在90°到180°之间
+
+
+
+在图形中，点积有下面的作用：
+
+- 求两个向量的角度（例如光源和表面的夹角和余弦）
+- 寻找一个向量投影到另一个向量的样子
+- 测量两个方向的接近程度
+- 确定向前还是向后
+
+
+
+**向量叉乘（外积/向量积）**：
+
+向量a x 向量b = (ya * zb - za * yb, za * xb - xa * zb, xa * yb - ya * xb)
+
+​                         = |a| * |b| * sinθ * 向量n（向量n 是向量ab 所在平面的单位法向量）
+
+**方向由右手法则确定**
+
+<img src="向量的叉乘.png" style="zoom:50%;" />
+
+几何意义：如果向量a 和向量b 构成平行四边形，那么外积的模长与该四边形的面积相等。
+
+<img src="向量叉乘(外积).png" style="zoom: 33%;" />
+
+在图形中，叉积有下面的作用：
+
+- 向量的叉积可以建立三维中的直角坐标系
+- 判断左或右
+- 判断内或外
+
+<img src="叉积作用.png" style="zoom:50%;" />
+
+向量 a x 向量 b，得到的结果新向量是正的，判定 b 在 a 的左侧；
+
+判断点 p 是否在三角形内部。在平面内可以使用**同向法**，在三维中可以使用**射线相交法**
+
+**同向法：**
+
+![](同向法.png)
+
+**射线相交法：**
+
+**任何复杂的三维模型都可以视作空间三角面片的集合**
+
+空间一射线，起点为 O，方向为 D，根据射线的参数公式，其上任意一点 P（交点）为：P = O + tD
+
+已知空间三角面片三个顶点为 v1，v2，v3，那么容易求得三角形的法向量 n。面上的向量(v1 - P) 与 n 是垂直的，所以它们的点积为 0：(v1 - P) · n = 0
+
+综上有 t = ((v1 - O) · n) / (D · n)
+
+最后再用同向法得到结果
+
+
+
+#### 矩阵在图形中普遍用于表示变换：平移，旋转，剪切，缩放
+
+
+
+矩阵乘法条件为 A 的列数要等于 B 的行数：A B = (M x N) (N x P) = (M x P)
+
+矩阵乘法满足结合律和分配律，一般不满足交换律
+
+矩阵转置：(A B)^T = B^T A^T
+
+单位矩阵（对角矩阵）：I_3x3 = [{1, 0, 0}, {0, 1, 0}, {0, 0, 1}]
+
+矩阵的逆：A A^-1 = A^-1 A = I，(A B)^-1 = B^-1 A^-1
+
+向量乘法的矩阵形式：
+
+![](向量乘法的矩阵形式.png)
+
+
+
+
+
+
+
+
 
 
 
@@ -119,6 +222,12 @@ w' = 3 * u' + 3 * v' = [0, 6]
 矩阵表示，：
 
 <img src="例子的矩阵计算.jpg" style="zoom: 25%;" />
+
+
+
+#### 迹：
+
+主对角线（左上角-右下角）的元素和
 
 
 
@@ -237,6 +346,20 @@ M 是线性变换矩阵，v 是特征向量，k 是特征值，I 是单位矩阵
 根据上面得到了 (M - k I) v = 0
 
 公式表示线性变换 M 经过调整后，能使 v 变为零空间。
+
+
+
+#### 可对角化：
+
+对角矩阵：主对角线外的元素皆为 0 的矩阵。主对角线上的元素可以为 0 或其他值。
+
+一个方块矩阵 A ，如果存在一个可逆矩阵 P 使得 P^-1 A P 是对角矩阵，则称 A 是可对角化的。
+
+
+
+
+
+
 
 
 
