--- a/Math/线性代数/线性代数.md
+++ b/Math/线性代数/线性代数.md
@@ -117,7 +117,154 @@ va = [xa, ya]，va * n = [n * xa, n * ya]
 
 向量乘法的矩阵形式：
 
-![](向量乘法的矩阵形式.png)
+<img src="向量乘法的矩阵形式.png" style="zoom: 50%;" />
+
+
+
+#### 2 维变换
+
+使用矩阵表示变换（线性变换）：旋转，缩放，剪切
+
+**缩放变换：** 
+
+x' = s x ; y' = s y;
+
+<img src="矩阵缩放.png" style="zoom:50%;" />
+
+<img src="矩阵缩放效果.png" style="zoom:50%;" />
+
+
+
+**反射变换：**
+
+x' = -x ; y' = y;
+
+<img src="矩阵反射变换.png" style="zoom:50%;" />
+
+<img src="矩阵反射变换效果.png" style="zoom:50%;" />
+
+**剪切变换：**
+
+<img src="矩阵剪切变换.png" style="zoom:50%;" />
+
+水平位移在 y = 0 处为 0；水平位移在 y = 1 处为 a；垂直位移始终为 0；
+
+<img src="矩阵剪切变换效果.png" style="zoom:50%;" />
+
+**旋转矩阵：**
+
+<img src="矩阵旋转效果.png" style="zoom:50%;" />
+
+<img src="旋转矩阵.png" style="zoom:50%;" />
+
+<img src="矩阵旋转变换.png" style="zoom:50%;" />
+
+**<u>齐次坐标</u>：**
+
+平移不是线性变换，只能这么表示：
+
+<img src="平移.png" style="zoom:50%;" />
+
+<img src="平移效果.png" style="zoom:50%;" />
+
+但我们不希望平移变成一个特殊的变换，用一种统一的方式来表示所有的变换——**齐次坐标**
+
+添加第三个坐标：
+
+<img src="齐次坐标添加新坐标.png" style="zoom:50%;" />
+
+平移变换的矩阵表示：
+
+<img src="齐次坐标下的矩阵平移变换.png" style="zoom:50%;" />
+
+结果中 w 坐标为 1 或 0 则操作有效
+
+
+
+**仿射变换：**
+
+仿射变换 = 线性映射 + 变换
+
+<img src="仿射变换.png" style="zoom:50%;" />
+
+<img src="仿射变换的齐次坐标表示.png" style="zoom:50%;" />
+
+利用齐次坐标表示缩放旋转平移：
+
+<img src="仿射变换的缩放旋转平移.png" style="zoom:50%;" />
+
+
+
+**<u>使用齐次坐标，任何一个点要写成 (x, y, 1)，任何一个向量要写成 (x, y, 0)</u>**
+
+
+
+**逆变换：**
+
+把一个变换的操作反过来，就是逆变换，也是变换矩阵的逆。
+
+
+
+#### 3 维变换
+
+**仿射变换：**
+
+使用齐次坐标表示：表示点的时候 w = 1，表示向量的时候 w = 0，当 w != 1 和 w != 0 时候， x y z 同除以 w 即可
+
+<img src="3维点和向量的齐次坐标表示.png" style="zoom:50%;" />
+
+<img src="3维齐次坐标表示的仿射变换.png" style="zoom:50%;" />
+
+**缩放变换：**
+
+<img src="3维缩放变换.png" style="zoom: 67%;" />
+
+**平移变换：**
+
+<img src="3维平移变换.png" style="zoom:67%;" />
+
+**旋转变换：**
+
+<img src="3维旋转拆解.png" style="zoom:50%;" />
+
+绕某个固定轴旋转：
+
+<img src="3维旋转变换.png" style="zoom:50%;" />
+
+- 绕某个轴旋转，对任意一个点，该轴上的坐标是不变的
+- 因为是右手螺旋定则，z 叉乘 x 得到的 y，所以如图的 y 矩阵是反的
+
+
+
+**正交矩阵：**
+
+一个矩阵的逆等于它的转置，这个矩阵称为正交矩阵。
+
+
+
+
+
+
+
+#### 视图变换：
+
+
+
+
+
+
+
+
+
+#### 投影变换：
+
+透视投影 和 正交投影
+
+<img src="透视投影和正交投影.png" style="zoom: 80%;" />
+
+
+
+#### 正交投影：
 
 
 
