--- a/Math/线性代数/线性代数.md
+++ b/Math/线性代数/线性代数.md
@@ -20,7 +20,9 @@ va = [xa, ya]，vb = [xb, yb]，va + vb = [xa + xb, ya + yb]
 
 **向量减法**：
 
-va - vb 几何意义是把 vb 的起点移动到 va 的起点，从 vb 的终点指向 va 的终点的新向量：va = [xa, ya]，vb = [xb, yb]，va - vb = [xb - xa, yb - ya]
+va - vb 几何意义是把 vb 的起点移动到 va 的起点，从 vb 的终点指向 va 的终点的新向量：
+
+va = [xa, ya]，vb = [xb, yb]，va - vb = [xb - xa, yb - ya]
 
 **向量数乘**：
 
@@ -537,7 +539,11 @@ M 是线性变换矩阵，v 是特征向量，k 是特征值，I 是单位矩阵
 协方差矩阵实质上是一个线性变换，主要思想有如下几点：
 
 1. 协方差矩阵是怎么来的：方差表征了沿特征轴方向的离散度，但无法表征特征间的相关性，因此引入协方差来进行描述这种相关性；
+
+   考虑分散在一条直线附近的点集，直线是该点集的拟合直线，那么方差
+
 2. 线性变换由旋转和缩放组成，通过特征值分解的方法可以导出，协方差矩阵等价于对原特征空间的白数据做了一个线性变换；
+
 3. 协方差矩阵的最大特征值对应的特征向量，总是指向方差最大的方向；次最大特征值对应的特征向量，正交于最大特征值对应的特征向量，并指向次最大方差指向的方向。
 
 注：协方差矩阵相当于两个特征向量之间的线性变换，可以通过特征方程求出特征向量和特征值
